@@ -1,5 +1,10 @@
 2017-11-02  Florian Weimer  <fweimer@redhat.com>
 
+	Add array_length and array_end macros.
+	* include/array_length.h: New file.
+
+2017-11-02  Florian Weimer  <fweimer@redhat.com>
+
 	[BZ #22332]
 	* posix/tst-glob-tilde.c (do_noescape): New variable.
 	(one_test): Process it.
